--- a/package.json
+++ b/package.json
@@ -1,81 +1,75 @@
 {
-  "_from": "git+https://github.com/oberstel/ioBroker.PJLinkV2.git",
-  "_id": "iobroker.pjlinkv2@2.1.0",
-  "_inBundle": false,
-  "_integrity": "",
-  "_location": "/iobroker.pjlinkv2",
-  "_phantomChildren": {
-    "@types/node": "13.5.2"
-  },
-  "_requested": {
-    "type": "git",
-    "raw": "https://github.com/oberstel/ioBroker.PJLinkV2.git",
-    "rawSpec": "https://github.com/oberstel/ioBroker.PJLinkV2.git",
-    "saveSpec": "git+https://github.com/oberstel/ioBroker.PJLinkV2.git",
-    "fetchSpec": "https://github.com/oberstel/ioBroker.PJLinkV2.git",
-    "gitCommittish": null
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "git+https://github.com/oberstel/ioBroker.PJLinkV2.git#eeaf41e5f122c55babb821b351d468d3dbac199a",
-  "_spec": "https://github.com/oberstel/ioBroker.PJLinkV2.git",
-  "_where": "/opt/iobroker",
+  "name": "iobroker.pjlinkv2",
+  "version": "2.1.0",
+  "description": "Control any PJLink compatible device",
   "author": {
     "name": "oberstel",
     "email": "oberstel@gmail.com"
   },
-  "bugs": {
-    "url": "https://github.com/oberstel/ioBroker.PJLinkV2/issues"
-  },
-  "bundleDependencies": false,
-  "dependencies": {
-    "@iobroker/adapter-core": "^2.4.0"
-  },
-  "deprecated": false,
-  "description": "ioBroker PJLink adapter, supporting PJLink specification Cass 1 and Class 2",
-  "devDependencies": {
-    "@iobroker/testing": "^2.3.0",
-    "@types/chai": "^4.2.12",
-    "@types/chai-as-promised": "^7.1.3",
-    "@types/gulp": "^4.0.6",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.12.2",
-    "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^9.0.5",
-    "@types/sinon-chai": "^3.2.4",
-    "axios": "^0.20.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^7.9.0",
-    "gulp": "^4.0.2",
-    "mocha": "^8.1.3",
-    "proxyquire": "^2.1.3",
-    "sinon": "^9.0.3",
-    "sinon-chai": "^3.5.0"
-  },
-  "homepage": "https://github.com/oberstel/ioBroker.PJLinkV2",
-  "keywords": [
-    "ioBroker",
-    "PJLink",
-    "Projector",
-    "Beamer"
+  "contributors": [
+    {
+      "name": "puschel"
+    }
   ],
+  "homepage": "https://github.com/oberstel/ioBroker.pjlinkv2",
   "license": "MIT",
-  "main": "main.js",
-  "name": "iobroker.pjlinkv2",
+  "keywords": [
+    "projector",
+    "beamer",
+    "monitor",
+    "multimedia"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/oberstel/ioBroker.PJLinkV2.git"
+    "url": "https://github.com/oberstel/ioBroker.pjlinkv2"
   },
+  "dependencies": {
+    "@iobroker/adapter-core": "^2.5.1"
+  },
+  "devDependencies": {
+    "@alcalzone/release-script": "^2.2.1",
+    "@iobroker/testing": "^2.5.2",
+    "@types/chai": "^4.2.22",
+    "@types/chai-as-promised": "^7.1.4",
+    "@types/gulp": "^4.0.9",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^14.17.34",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.6",
+    "@types/sinon-chai": "^3.2.5",
+    "axios": "^0.24.0",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^8.3.0",
+    "gulp": "^4.0.2",
+    "mocha": "^9.1.3",
+    "proxyquire": "^2.1.3",
+    "sinon": "^12.0.1",
+    "sinon-chai": "^3.7.0",
+    "typescript": "~4.4.4"
+  },
+  "main": "main.js",
+  "files": [
+    "admin{,/!(src)/**}/!(tsconfig|tsconfig.*).json",
+    "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js}",
+    "lib/",
+    "www/",
+    "io-package.json",
+    "LICENSE",
+    "main.js"
+  ],
   "scripts": {
-    "lint": "eslint",
-    "test": "npm run test:js && npm run test:package",
-    "test:integration": "mocha test/integration --exit",
-    "test:js": "mocha --config ../../Downloads/ioBroker.template-master/JavaScript/test/mocharc.custom.json \\\"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\\\"",
+    "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
     "test:package": "mocha test/package --exit",
-    "test:unit": "mocha test/unit --exit"
+    "test:unit": "mocha test/unit --exit",
+    "test:integration": "mocha test/integration --exit",
+    "test": "npm run test:js && npm run test:package",
+    "check": "tsc --noEmit -p tsconfig.check.json",
+    "lint": "eslint",
+    "release": "release-script"
   },
-  "version": "2.1.0"
+  "bugs": {
+    "url": "https://github.com/oberstel/ioBroker.pjlinkv2/issues"
+  },
+  "readmeFilename": "README.md"
 }
