--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.pjlinkv2",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "Control any PJLink compatible device",
   "author": {
     "name": "oberstel",
@@ -11,17 +11,19 @@
       "name": "puschel"
     }
   ],
-  "homepage": "https://github.com/oberstel/ioBroker.pjlinkv2",
+  "homepage": "https://github.com/oberstel/iobroker.pjlinkv2",
   "license": "MIT",
   "keywords": [
     "projector",
     "beamer",
     "monitor",
+    "display",
+    "smarthome",
     "multimedia"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/oberstel/ioBroker.pjlinkv2"
+    "url": "https://github.com/oberstel/iobroker.pjlinkv2"
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.5.1"
@@ -69,7 +71,7 @@
     "release": "release-script"
   },
   "bugs": {
-    "url": "https://github.com/oberstel/ioBroker.pjlinkv2/issues"
+    "url": "https://github.com/oberstel/iobroker.pjlinkv2/issues"
   },
   "readmeFilename": "README.md"
 }
