--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/oberstel/iobroker.pjlinkv2"
+    "url": "https://github.com/oberstel/iobroker.pjlinkv2.git"
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.5.1"
