--- a/package.json
+++ b/package.json
@@ -26,29 +26,38 @@
     "url": "https://github.com/oberstel/ioBroker.pjlinkv2"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.5.1"
+    "@iobroker/adapter-core": "^2.5.1",
+    "mock-http-server": "^1.4.5",
+    "node-schedule": "^2.0.0",
+    "ts-json-object": "^0.2.10"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^3.4.1",
+    "@alcalzone/release-script": "^2.2.1",
     "@iobroker/testing": "^2.5.2",
     "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.4",
-    "@types/gulp": "^4.0.2",
+    "@types/gulp": "^4.0.9",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^14.17.34",
+    "@types/node": "^14.17.27",
+    "@types/node-schedule": "^1.3.2",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^10.0.6",
+    "@types/sinon": "^10.0.4",
     "@types/sinon-chai": "^3.2.5",
-    "axios": "^0.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "axios": "^0.23.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.3.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "mocha": "^9.1.3",
     "proxyquire": "^2.1.3",
-    "sinon": "^12.0.1",
+    "rimraf": "^3.0.2",
+    "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
-    "typescript": "~4.5.4"
+    "source-map-support": "^0.5.20",
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4"
   },
   "main": "main.js",
   "files": [
